# EasyVulkan

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
include/: EasyVKStart.h  EasyVulkan.hpp  GlfwGeneral.hpp  VKBase+.h  VKBase.h  VKFormat.h
shader/: FirstTriangle.frag.shader  FirstTriangle.frag.spv  FirstTriangle.vert.shader  FirstTriangle.vert.spv  InstanceRendering.vert.shader  PushConstant.vert.shader  PushConstant.vert.spv  UniformBuffer.vert.shader  VertexBuffer.frag.shader  VertexBuffer.vert.shader
src/: main.cpp
